<resources>
    <string name="no_euicc">No removable eSIM card accessible by this app is detected on this device. Insert a compatible card or a USB reader.</string>
    <string name="no_profile">No profiles (yet) on this eSIM.</string>
    <string name="notification_help">Help</string>
    <string name="profile_reload_slots">Reload Slots</string>
    <string name="profile_no_enabled_profile">Unknown</string>
    <string name="channel_name_format">Logical Slot %d</string>
    <string name="channel_name_format_se">Logical Slot %1$d, SE %2$d</string>
    <string name="channel_type_usb" translatable="false">USB</string>
    <string name="channel_name_format_usb">USB Reader</string>
    <string name="channel_name_format_usb_se">USB Reader, SE %d</string>
    <string name="channel_type_omapi" translatable="false">OpenMobile API (OMAPI)</string>
    <string name="profile_state_enabled">Enabled</string>
    <string name="profile_state_disabled">Disabled</string>
    <string name="profile_provider">Provider:</string>
    <string name="profile_class">Class:</string>
    <string name="profile_class_testing">Testing</string>
    <string name="profile_class_provisioning">Provisioning</string>
    <string name="profile_class_operational">Operational</string>
    <string name="profile_iccid" translatable="false">ICCID:</string>
    <string name="profile_sequence_number_format" translatable="false">#%d</string>
    <string name="profile_enable">Enable</string>
    <string name="profile_disable">Disable</string>
    <string name="profile_delete">Delete</string>
    <string name="profile_rename">Rename</string>
    <string name="profile_switch_timeout">Timed out waiting for the eSIM chip to switch profiles. This may be a bug in your phone\'s modem firmware. Try toggling airplane mode, restarting the application, or rebooting the phone.</string>
    <string name="profile_switch_did_not_refresh">The operation was successful, but your phone\'s modem refused to refresh. You might need to toggle airplane mode or reboot in order to use the new profile.</string>
    <string name="toast_profile_enable_failed">Cannot switch to new eSIM profile.</string>
    <string name="toast_profile_enable_cross_class">Please disable the currently enabled profile manually in order to switch to this profile.</string>
    <string name="toast_profile_delete_confirm_text_mismatched">Confirmation string mismatch</string>
    <string name="toast_euicc_memory_reset_confirm_text_mismatched">Confirmation string mismatch</string>
    <string name="toast_euicc_memory_reset_finished">This chip has been erased</string>
    <string name="toast_iccid_copied">ICCID copied to clipboard</string>
    <string name="toast_sn_copied">Serial number copied to clipboard</string>
    <string name="toast_eid_copied">EID copied to clipboard</string>
    <string name="toast_atr_copied">ATR copied to clipboard</string>
    <string name="usb_permission">Grant USB permission</string>
    <string name="usb_permission_needed">Permission is needed to access the USB smart card reader.</string>
    <string name="usb_failed">Cannot connect to eSIM via a USB smart card reader.</string>
    <string name="task_notification">Long-running Tasks</string>
    <string name="task_profile_download">Downloading eSIM profile</string>
    <string name="task_profile_download_failure">Failed to download eSIM profile</string>
    <string name="task_profile_rename">Renaming eSIM profile</string>
    <string name="task_profile_rename_failure">Failed to rename eSIM profile</string>
    <string name="task_profile_delete">Deleting eSIM profile</string>
    <string name="task_profile_delete_failure">Failed to delete eSIM profile</string>
    <string name="task_profile_switch">Switching eSIM profile</string>
    <string name="task_profile_switch_failure">Failed to switch eSIM profile</string>
    <string name="task_euicc_memory_reset">Erasing eSIM chip</string>
    <string name="task_euicc_memory_reset_failure">Failed to erase eSIM chip</string>
    <string name="profile_download">New eSIM</string>
    <string name="profile_download_server">Server (RSP / SM-DP+)</string>
    <string name="profile_download_code">Activation Code</string>
    <string name="profile_download_confirmation_code">Confirmation Code (Optional)</string>
    <string name="profile_download_confirmation_code_required">Confirmation Code (Required)</string>
    <string name="profile_download_imei">IMEI (Optional)</string>
    <string name="profile_download_no_lpa_string">No LPA code found in clipboard</string>
    <string name="profile_download_incorrect_lpa_string">Unable to parse</string>
    <string name="profile_download_incorrect_lpa_string_message">Could not parse QR code or clipboard content as a LPA code.</string>
    <string name="download_wizard">Download Wizard</string>
    <string name="download_wizard_back">Back</string>
    <string name="download_wizard_next">Next</string>
    <string name="download_wizard_low_power">Low Power WARNING</string>
    <string name="download_wizard_low_power_content">Your download process may be unexpectedly interrupted due to low battery or sudden shutdown.\n\nTo prevent interruption due to screen darkness, the screen will remain on during the download process.\n\nIf you believe continuing the download is safe, please click "Next" to begin the download.</string>
    <string name="download_wizard_slot_removed">Selected SIM has been removed</string>
    <string name="download_wizard_slot_select">Select or confirm the eSIM you would like to download to:</string>
    <string name="download_wizard_slot_type">Type:</string>
    <string name="download_wizard_slot_type_removable">Removable</string>
    <string name="download_wizard_slot_type_internal">Internal</string>
    <string name="download_wizard_slot_type_internal_port">Internal, port %d</string>
    <string name="download_wizard_slot_eid" translatable="false">eID:</string>
    <string name="download_wizard_slot_active_profile">Active Profile:</string>
    <string name="download_wizard_slot_free_space">Free Space:</string>
    <string name="download_wizard_method_select">How would you like to download the eSIM profile?</string>
    <string name="download_wizard_method_qr_code">Scan a QR code with camera</string>
    <string name="download_wizard_method_gallery">Load a QR code from gallery</string>
    <string name="download_wizard_method_clipboard">Load from Clipboard</string>
    <string name="download_wizard_method_manual">Enter manually</string>
    <string name="download_wizard_details">Input or confirm details for downloading your eSIM:</string>
    <string name="download_wizard_progress">Downloading your eSIM…</string>
    <string name="download_wizard_progress_step_preparing">Preparing</string>
    <string name="download_wizard_progress_step_connecting">Establishing connection to server</string>
    <string name="download_wizard_progress_step_authenticating">Authenticating your device with server</string>
    <string name="download_wizard_progress_step_downloading">Downloading eSIM profile</string>
    <string name="download_wizard_progress_step_finalizing">Loading eSIM profile into storage</string>
    <string name="download_wizard_diagnostics">Error diagnostics</string>
    <string name="download_wizard_diagnostics_error_code">Error code: %s</string>
    <string name="download_wizard_diagnostics_last_http_status">Last HTTP status (from server): %d</string>
    <string name="download_wizard_diagnostics_last_http_response">Last HTTP response (from server):</string>
    <string name="download_wizard_diagnostics_last_http_exception">Last HTTP exception:</string>
    <string name="download_wizard_diagnostics_last_apdu_response">Last APDU response (from SIM): %s</string>
    <string name="download_wizard_diagnostics_last_apdu_response_success">Last APDU response (from SIM) is successful</string>
    <string name="download_wizard_diagnostics_last_apdu_response_fail">Last APDU response (from SIM) is a failure</string>
    <string name="download_wizard_diagnostics_last_apdu_exception">Last APDU exception:</string>
    <string name="download_wizard_diagnostics_save">Save</string>
    <string name="download_wizard_diagnostics_file_template">Diagnostics at %s</string>
    <string name="download_wizard_error_iccid_already">This eSIM profile is already present on your eSIM chip.</string>
    <string name="download_wizard_error_insufficient_memory">Your eSIM chip does not have sufficient memory left to download the profile.</string>
    <string name="download_wizard_error_unsupported_profile">This eSIM profile is unsupported by your eSIM chip.</string>
    <string name="download_wizard_error_card_internal_error">An error occurred in your eSIM chip.</string>
    <string name="download_wizard_error_eid_not_supported">The EID of your device or eSIM chip is unsupported by your carrier.</string>
    <string name="download_wizard_error_eid_mismatch">This eSIM profile has been downloaded on another device.</string>
    <string name="download_wizard_error_profile_unreleased">This eSIM profile has been revoked.</string>
    <string name="download_wizard_error_profile_unavailable">This eSIM profile is no longer available.</string>
    <string name="download_wizard_error_matching_id_refused">The activation code is invalid.</string>
    <string name="download_wizard_error_profile_retries_exceeded">The maximum number of download attempts for the eSIM profile has been exceeded.</string>
    <string name="download_wizard_error_confirmation_code_missing">Confirmation code is required to download this profile.</string>
    <string name="download_wizard_error_confirmation_code_refused">The confirmation code you entered is invalid.</string>
    <string name="download_wizard_error_profile_expired">This eSIM profile has expired.</string>
    <string name="download_wizard_error_confirmation_code_retries_exceeded">The maximum number of download attempts for the confirmation code has been exceeded.</string>
    <string name="download_wizard_error_unknown_hostname">Unknown SM-DP+ address</string>
    <string name="download_wizard_error_network_unreachable">Network is unreachable</string>
    <string name="download_wizard_error_tls_certificate">TLS certificate error, this eSIM profile is not supported</string>
    <string name="download_wizard_error_suggest_profile_installed">You are trying to reinstall an already downloaded eSIM profile</string>
    <string name="download_wizard_error_suggest_insufficient_memory">Please delete some unused eSIM profiles and try again</string>
    <string name="download_wizard_error_suggest_contact_carrier">Please contact your carrier for assistance.</string>
    <string name="download_wizard_error_suggest_contact_reissue">Please contact your carrier to reissue this eSIM profile.</string>
    <string name="download_wizard_error_suggest_network_unreachable">Please try again after connecting to a different network (e.g. switching between Wi-Fi and data).</string>
    <string name="download_guard">Download Guard</string>
    <string name="download_guard_dialog_title">Setup your eSIM</string>
    <string name="download_guard_dialog_description">"Some device info that's needed for setup will be sent to your carrier."</string>
    <string name="download_guard_cancel_button">Cancel</string>
    <string name="download_guard_setup_button">Setup</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_desc">eSIM profile operations send notifications to the carrier. Fine-tune this behavior as needed here.</string>
    <string name="pref_info">Info</string>
    <string name="pref_info_app_version">App Version</string>
    <string name="pref_info_source_code">Source Code</string>
    <string name="pref_info_source_code_url" translatable="false">https://gitea.angry.im/PeterCxy/OpenEUICC</string>
</resources>