<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/download_wizard_details_title"
            android:text="@string/download_wizard_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_download_server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_download_server">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_download_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_download_code"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_download_confirmation_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_download_confirmation_code"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_download_imei"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="6dp"
            android:hint="@string/profile_download_imei"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            app:constraint_referenced_ids="profile_download_server,profile_download_code,profile_download_confirmation_code,profile_download_imei"
            app:flow_verticalGap="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_wizard_details_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constrainedWidth="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>